# FCAgent

./: .env.example  .gitignore  README.md  README_CN.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
config/: __init__.py
fact_checker/: __init__.py  get_agent.py
prompt/: openai-tools-agent.json  openai_tools_agent.py  react_json.json  shoggoth13_react_json.json  shoggoth13_react_json.py  shoggoth13_react_json_cn.py  structured_chat.json
retriever/: __init__.py  ask_llm.py  closed_book.py  closed_book_knowledge.py  query_generation_agent.py  query_router.py  web_search.py  wiki_knowledge.py  wikipedia.py
tools/: __init__.py  fake_news_detection.py  fake_news_detection_tool.py  image_comprehending.py  image_qa.py  image_qa_tool.py  multi_modal_content_comprehending.py  summarizer.py  web_browsing.py  web_scrapy.py
utils/: __init__.py  gpt4v.py  pydantic.py  react_chat.py
